[tool.poetry]
name = "django-async-orm"
version = "0.1.12"
description = "Bringing async capabilities to django ORM"
authors = ["SkanderBM <skander.bmahmoud@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rednaks/django-async-orm"
repository = "https://github.com/rednaks/django-async-orm"
keywords = ["django", "async", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Django = "^3.2.3"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "5.0.4"
coverage = "^7.1.0"
tox = "3.28.0"
tox-pyenv = "^1.1.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
